Navigationdata big update