@@ -1,23 +1,25 @@
 package bruzsal.betfair.navigation;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
-public final class Root extends NavigationData {
+public final class Root extends Child {
 
-    public static Root getInstance() {
-        return new Root();
-    }
-
-    private Root() {
+    public Root() {
         super("0", "ROOT");
     }
 
+    private List<EventType> eventTypes = new ArrayList<>();
+
     @Override
-    List<List<? extends NavigationData>> getLists() {
-        return Arrays.asList(allEvenType);
+
+    List<List<? extends Child>> getLists() {
+        return List.of(eventTypes);
     }
 
+    public List<EventType> getEventTypes() {
+        return eventTypes;
+    }
 
     @Override
     public String toString() {
